--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,13 +6,13 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: rgb(33, 175, 144);
-  --ifm-color-primary-darker: rgb(31, 165, 136);
-  --ifm-color-primary-darkest: rgb(26, 136, 112);
-  --ifm-color-primary-light: rgb(70, 203, 174);
-  --ifm-color-primary-lighter: rgb(102, 212, 189);
-  --ifm-color-primary-lightest: rgb(146, 224, 208);
+  --ifm-color-primary: hsl(214, 68%, 45%);
+  --ifm-color-primary-dark: hsl(214, 68%, 41%);
+  --ifm-color-primary-darker: hsl(214, 68%, 38%);
+  --ifm-color-primary-darkest: hsl(214, 68%, 32%);
+  --ifm-color-primary-light: hsl(214, 56%, 54%);
+  --ifm-color-primary-lighter: hsl(214, 56%, 62%);
+  --ifm-color-primary-lightest: hsl(214, 56%, 73%);
   --ifm-code-font-size: 95%;
 }
 
@@ -27,299 +27,330 @@ html[data-theme='dark'] .docusaurus-highlight-code-line {
   background-color: rgba(0, 0, 0, 0.3);
 }
 
-
-.badge-links>a {
-	border-radius: 10px;
-	border: 1px solid #187abf;
-	padding: 5px 8px;
-	margin-right:15px;
-	color: #187abf;
+.badge-links > a {
+  border-radius: 10px;
+  border: 1px solid #187abf;
+  padding: 5px 8px;
+  margin-right: 15px;
+  color: #187abf;
 }
 
-.badge-links>a:nth-child(2) {
-	color: #25c2a0;
-	border-color: #25c2a0;
+.badge-links > a:nth-child(2) {
+  color: #25c2a0;
+  border-color: #25c2a0;
 }
 
-.badge-links>a:nth-child(3) {
-	color:#c93a2a;
-	border-color: #c93a2a;
+.badge-links > a:nth-child(3) {
+  color: #c93a2a;
+  border-color: #c93a2a;
 }
 
-
-[data-theme="light"] .shiki.nord {
+[data-theme='light'] .shiki.nord {
   display: none;
 }
 
-[data-theme="dark"] .shiki.min-light {
+[data-theme='dark'] .shiki.min-light {
   display: none;
 }
-
 
 pre {
-	 background-color: white;
-	 color: black;
-
-	 padding: 12px;
-
-	 border-left: 1px solid #999;
-	 border-bottom: 1px solid #999;
-
-	 margin-bottom: 3rem;
-
-    overflow-x: auto;
-    position: relative;
-}
- pre.shiki {
-    overflow-x: auto;
-}
- pre.shiki:hover .dim {
-	 opacity: 1;
-}
- pre.shiki div.dim {
-	 opacity: 0.5;
-}
- pre.shiki div.dim, pre.shiki div.highlight {
-	 margin: 0;
-	 padding: 0;
-}
- pre.shiki div.highlight {
-	 opacity: 1;
-	 background-color: #f1f8ff;
-}
- pre.shiki div.line {
-	 min-height: 1rem;
+  background-color: white;
+  color: black;
+  padding: 12px;
+  border-left: 1px solid #999;
+  border-bottom: 1px solid #999;
+  margin-bottom: 3rem;
+  overflow-x: auto;
+  position: relative;
 }
 
-pre.shiki .language-id{
-    display: none;
+pre.shiki {
+  overflow-x: auto;
 }
 
- pre.twoslash {
-	 border-color: #719af4;
+pre.shiki:hover .dim {
+  opacity: 1;
+}
+
+pre.shiki div.dim {
+  opacity: 0.5;
+}
+
+pre.shiki div.dim,
+pre.shiki div.highlight {
+  margin: 0;
+  padding: 0;
+}
+
+pre.shiki div.highlight {
+  opacity: 1;
+  background-color: #f1f8ff;
+}
+
+pre.shiki div.line {
+  min-height: 1rem;
+}
+
+pre.shiki .language-id {
+  display: none;
+}
+
+pre.twoslash {
+  border-color: #719af4;
 }
 
 pre.twoslash:hover data-lsp {
-    border-color: #747474;
+  border-color: #747474;
 }
 
 pre.twoslash data-lsp:hover::before {
-    content: attr(lsp);
-    position: absolute;
-    transform: translate(0, 1rem);
-
-    background-color: #3f3f3f;
-    color: #fff;
-    text-align: left;
-    padding: 5px 8px;
-    border-radius: 2px;
-    font-family: "JetBrains Mono", Menlo, Monaco, Consolas, Courier New, monospace;
-    font-size: 14px;
-    white-space: pre-wrap;
-    z-index: 100;
+  content: attr(lsp);
+  position: absolute;
+  transform: translate(0, 1rem);
+  background-color: #3f3f3f;
+  color: #fff;
+  text-align: left;
+  padding: 5px 8px;
+  border-radius: 2px;
+  font-family: 'JetBrains Mono', Menlo, Monaco, Consolas, Courier New, monospace;
+  font-size: 14px;
+  white-space: pre-wrap;
+  z-index: 100;
 }
 
 pre .code-container {
-	 overflow: auto;
+  overflow: auto;
 }
 
- pre .code-container > a {
-	 position: absolute;
-	 right: 8px;
-	 bottom: 8px;
-	 border-radius: 4px;
-	 border: 1px solid #719af4;
-	 padding: 0 8px;
-	 color: #719af4;
-	 text-decoration: none;
-	 opacity: 0;
-	 transition-timing-function: ease;
-	 transition: opacity 0.3s;
+pre .code-container > a {
+  position: absolute;
+  right: 8px;
+  bottom: 8px;
+  border-radius: 4px;
+  border: 1px solid #719af4;
+  padding: 0 8px;
+  color: #719af4;
+  text-decoration: none;
+  opacity: 0;
+  transition-timing-function: ease;
+  transition: opacity 0.3s;
 }
+
 @media (prefers-reduced-motion: reduce) {
-	 pre .code-container > a {
-		 transition: none;
-	}
-}
- pre .code-container > a:hover {
-	 color: white;
-	 background-color: #719af4;
-}
- pre .code-container:hover a {
-	 opacity: 1;
+  pre .code-container > a {
+    transition: none;
+  }
 }
 
- pre code {
-	 font-size: 15px;
-	 font-family: "JetBrains Mono", Menlo, Monaco, Consolas, Courier New, monospace;;
-	 white-space: pre;
-	 -webkit-overflow-scrolling: touch;
-}
- pre code a {
-	 text-decoration: none;
-}
- pre data-err {
-	 background: url("data:image/svg+xml,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%206%203'%20enable-background%3D'new%200%200%206%203'%20height%3D'3'%20width%3D'6'%3E%3Cg%20fill%3D'%23c94824'%3E%3Cpolygon%20points%3D'5.5%2C0%202.5%2C3%201.1%2C3%204.1%2C0'%2F%3E%3Cpolygon%20points%3D'4%2C0%206%2C2%206%2C0.6%205.4%2C0'%2F%3E%3Cpolygon%20points%3D'0%2C2%201%2C3%202.4%2C3%200%2C0.6'%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E") repeat-x bottom left;
-	 padding-bottom: 3px;
-}
- pre .query {
-	 margin-bottom: 10px;
-	 color: #137998;
-	 display: inline-block;
+pre .code-container > a:hover {
+  color: white;
+  background-color: #719af4;
 }
 
- pre .error, pre .error-behind {
-	 margin-left: -14px;
-	 margin-top: 8px;
-	 margin-bottom: 4px;
-	 padding: 6px;
-	 padding-left: 14px;
-	 width: calc(100% - 20px);
-	 white-space: pre-wrap;
-	 display: block;
+pre .code-container:hover a {
+  opacity: 1;
 }
- pre .error {
-	 position: absolute;
-	 background-color: #fee;
-	 border-left: 2px solid #bf1818;
-	 display: flex;
-	 align-items: center;
-	 color: black;
+
+pre code {
+  font-size: 15px;
+  font-family: 'JetBrains Mono', Menlo, Monaco, Consolas, Courier New, monospace;
+  white-space: pre;
+  -webkit-overflow-scrolling: touch;
 }
- pre .error .code {
-	 display: none;
+
+pre code a {
+  text-decoration: none;
 }
- pre .error-behind {
-	 user-select: none;
-	 visibility: transparent;
-	 color: #fee;
+
+pre data-err {
+  background: url("data:image/svg+xml,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%206%203'%20enable-background%3D'new%200%200%206%203'%20height%3D'3'%20width%3D'6'%3E%3Cg%20fill%3D'%23c94824'%3E%3Cpolygon%20points%3D'5.5%2C0%202.5%2C3%201.1%2C3%204.1%2C0'%2F%3E%3Cpolygon%20points%3D'4%2C0%206%2C2%206%2C0.6%205.4%2C0'%2F%3E%3Cpolygon%20points%3D'0%2C2%201%2C3%202.4%2C3%200%2C0.6'%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E")
+    repeat-x bottom left;
+  padding-bottom: 3px;
 }
- pre .arrow {
-	 background-color: #eee;
-	 position: relative;
-	 top: -7px;
-	 margin-left: 0.1rem;
-	 border-left: 1px solid #eee;
-	 border-top: 1px solid #eee;
-	 transform: translateY(25%) rotate(45deg);
-	 height: 8px;
-	 width: 8px;
+
+pre .query {
+  margin-bottom: 10px;
+  color: #137998;
+  display: inline-block;
 }
- pre .popover {
-	 margin-bottom: 10px;
-	 background-color: #eee;
-	 display: inline-block;
-	 padding: 0 0.5rem 0.3rem;
-	 margin-top: 10px;
-	 border-radius: 3px;
+
+pre .error,
+pre .error-behind {
+  margin-left: -14px;
+  margin-top: 8px;
+  margin-bottom: 4px;
+  padding: 6px;
+  padding-left: 14px;
+  width: calc(100% - 20px);
+  white-space: pre-wrap;
+  display: block;
 }
- pre .inline-completions ul.dropdown {
-	 display: inline-block;
-	 position: absolute;
-	 width: 240px;
-	 background-color: gainsboro;
-	 color: grey;
-	 padding-top: 4px;
-	 font-family: var(--code-font);
-	 font-size: 0.8rem;
-	 margin: 0;
-	 padding: 0;
-	 border-left: 4px solid #4b9edd;
+
+pre .error {
+  position: absolute;
+  background-color: #fee;
+  border-left: 2px solid #bf1818;
+  display: flex;
+  align-items: center;
+  color: black;
 }
- pre .inline-completions ul.dropdown::before {
-	 background-color: #4b9edd;
-	 width: 2px;
-	 position: absolute;
-	 top: -1.2rem;
-	 left: -3px;
-	 content: " ";
+
+pre .error .code {
+  display: none;
 }
- pre .inline-completions ul.dropdown li {
-	 overflow-x: hidden;
-	 padding-left: 4px;
-	 margin-bottom: 4px;
+
+pre .error-behind {
+  user-select: none;
+  visibility: transparent;
+  color: #fee;
 }
- pre .inline-completions ul.dropdown li.deprecated {
-	 text-decoration: line-through;
+
+pre .arrow {
+  background-color: #eee;
+  position: relative;
+  top: -7px;
+  margin-left: 0.1rem;
+  border-left: 1px solid #eee;
+  border-top: 1px solid #eee;
+  transform: translateY(25%) rotate(45deg);
+  height: 8px;
+  width: 8px;
 }
- pre .inline-completions ul.dropdown li span.result-found {
-	 color: #4b9edd;
+
+pre .popover {
+  margin-bottom: 10px;
+  background-color: #eee;
+  display: inline-block;
+  padding: 0 0.5rem 0.3rem;
+  margin-top: 10px;
+  border-radius: 3px;
 }
- pre .inline-completions ul.dropdown li span.result {
-	 width: 100px;
-	 color: black;
-	 display: inline-block;
+
+pre .inline-completions ul.dropdown {
+  display: inline-block;
+  position: absolute;
+  width: 240px;
+  background-color: gainsboro;
+  color: grey;
+  padding-top: 4px;
+  font-family: var(--code-font);
+  font-size: 0.8rem;
+  margin: 0;
+  padding: 0;
+  border-left: 4px solid #4b9edd;
 }
- .dark-theme .markdown pre {
-	 background-color: #d8d8d8;
-	 border-color: #ddd;
-	 filter: invert(98%) hue-rotate(180deg);
+
+pre .inline-completions ul.dropdown::before {
+  background-color: #4b9edd;
+  width: 2px;
+  position: absolute;
+  top: -1.2rem;
+  left: -3px;
+  content: ' ';
 }
- data-lsp {
-	 border-bottom: 1px dotted transparent;
-	 transition-timing-function: ease;
-	 transition: border-color 0.3s;
+
+pre .inline-completions ul.dropdown li {
+  overflow-x: hidden;
+  padding-left: 4px;
+  margin-bottom: 4px;
 }
- @media (prefers-reduced-motion: reduce) {
-	 data-lsp {
-		 transition: none;
-	}
+
+pre .inline-completions ul.dropdown li.deprecated {
+  text-decoration: line-through;
+}
+
+pre .inline-completions ul.dropdown li span.result-found {
+  color: #4b9edd;
+}
+
+pre .inline-completions ul.dropdown li span.result {
+  width: 100px;
+  color: black;
+  display: inline-block;
+}
+
+.dark-theme .markdown pre {
+  background-color: #d8d8d8;
+  border-color: #ddd;
+  filter: invert(98%) hue-rotate(180deg);
+}
+
+data-lsp {
+  border-bottom: 1px dotted transparent;
+  transition-timing-function: ease;
+  transition: border-color 0.3s;
+}
+
+@media (prefers-reduced-motion: reduce) {
+  data-lsp {
+    transition: none;
+  }
 }
 
 .tag-container {
-	position: relative;
+  position: relative;
 }
+
 .tag-container .twoslash-annotation {
-	position: absolute;
-	font-family: "JetBrains Mono", Menlo, Monaco, Consolas, Courier New, monospace;
-	right: -10px;
-	width: 200px;
-	color: #187abf;
-	background-color: #fcf3d9 bb;
+  position: absolute;
+  font-family: 'JetBrains Mono', Menlo, Monaco, Consolas, Courier New, monospace;
+  right: -10px;
+  width: 200px;
+  color: #187abf;
+  background-color: #fcf3d9 bb;
 }
+
 .tag-container .twoslash-annotation p {
-	text-align: left;
-	font-size: 0.8rem;
-	line-height: 0.9rem;
+  text-align: left;
+  font-size: 0.8rem;
+  line-height: 0.9rem;
 }
+
 .tag-container .twoslash-annotation svg {
-	float: left;
-	margin-left: -44px;
+  float: left;
+  margin-left: -44px;
 }
+
 .tag-container .twoslash-annotation.left {
-	right: auto;
-	left: -200px;
+  right: auto;
+  left: -200px;
 }
+
 .tag-container .twoslash-annotation.left svg {
-	float: right;
-	margin-right: -5px;
+  float: right;
+  margin-right: -5px;
 }
 
 pre .logger {
-	display: flex;
-	align-items: center;
-	color: black;
-	padding: 6px;
-	padding-left: 8px;
-	width: calc(100% - 19px);
-	white-space: pre-wrap;
+  display: flex;
+  align-items: center;
+  color: black;
+  padding: 6px;
+  padding-left: 8px;
+  width: calc(100% - 19px);
+  white-space: pre-wrap;
 }
+
 pre .logger svg {
-	margin-right: 9px;
+  margin-right: 9px;
 }
+
 pre .logger.error-log {
-	background-color: #fee;
-	border-left: 2px solid #bf1818;
+  background-color: #fee;
+  border-left: 2px solid #bf1818;
 }
+
 pre .logger.warn-log {
-	background-color: #ffe;
-	border-left: 2px solid #eae662;
+  background-color: #ffe;
+  border-left: 2px solid #eae662;
 }
+
 pre .logger.log-log {
-	background-color: #e9e9e9;
-	border-left: 2px solid #ababab;
+  background-color: #e9e9e9;
+  border-left: 2px solid #ababab;
 }
+
 pre .logger.log-log svg {
-	margin-left: 6px;
-	margin-right: 9px;
+  margin-left: 6px;
+  margin-right: 9px;
 }
