--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -29,10 +29,10 @@ html[data-theme='dark'] .docusaurus-highlight-code-line {
 
 .badge-links > a {
   border-radius: 10px;
-  border: 1px solid #187abf;
+  border: 1px solid #b20afa;
   padding: 5px 8px;
   margin-right: 15px;
-  color: #187abf;
+  color: #b20afa;
 }
 
 .badge-links > a:nth-child(2) {
@@ -43,6 +43,11 @@ html[data-theme='dark'] .docusaurus-highlight-code-line {
 .badge-links > a:nth-child(3) {
   color: #c93a2a;
   border-color: #c93a2a;
+}
+
+.badge-links > a:nth-child(4) {
+  color: #187abf;
+  border-color: #187abf;
 }
 
 [data-theme='light'] .shiki.nord {
@@ -125,7 +130,7 @@ pre .code-container {
 pre .code-container > a {
   position: absolute;
   right: 8px;
-  bottom: 8px;
+  bottom: -30px;
   border-radius: 4px;
   border: 1px solid #719af4;
   padding: 0 8px;
